Changed yaml to display latex equations

--- a/_notebooks/2020-04-17-Recommendation-Systems.ipynb
+++ b/_notebooks/2020-04-17-Recommendation-Systems.ipynb
@@ -4,13 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Recommender Systems\n",
-    "> A starter blog for recommender systems \n",
-    "\n",
+    "# \"Introduction to Recommender Systems\"\n",
+    "> \"A starter blog for recommender systems\"\n",
     "- toc: true\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [jupyter]"
+    "- categories: [fastpages, jupyter]"
    ]
   },
   {
@@ -165,9 +164,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In practice, we get better estimates if we model deviations.\n",
+    "\n",
+    "$$ \\hat{r}_{xi} = b_{xi} + \\frac{\\sum_{j \\in N(i;x)} s_{ij} (r_{xj} - b_{xj})}{\\sum_{j \\in N(i;x)} s_{ij}} $$\n",
+    "\n",
+    "where $$ b_{xi} = \\mu + b_x + b_i $$\n",
+    "\n",
+    "where $\\mu$ is overall avg rating, $b_x$ is rating deviation of user $x$ and $b_i$ is the rating deviation of movie $i$\n",
+    "\n",
+    "Issues with above is:\n",
+    "1. Similarity measures are arbitrary \n",
+    "2. Pairwise similarities ignore interaction among users \n",
+    "3. Taking a weighted avg can be restricting\n",
+    "\n",
+    "Solution: Recommendation via Optimization. Use $w_{ij}$ instead of $s_{ij}$ that can be directly estimated using data.\n",
+    "\n",
+    "$$ \\hat{r_{xi}} = b_{xi} + \\sum\\limits_{j \\in N(i;x)} w_{ij} (r_{xj} - b_{xj}) $$\n",
+    "where $N(i;x)$ is set of movies rated by user $x$ that are similar to movie $i$ and $w_{ij}$ is the iteraction weight between pairs of movies. \n",
+    "\n",
+    "$w_{ij}$ can be learned/estimated based on $x$ an dall other users that rated $i$ by minimizing SSE on training data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Pros and Cons of Collaborative Filtering\n",
     "Pros:\n",
-    "* Works for any kinf of item, no feature creation needed \n",
+    "* Works for any kind of item, no feature creation needed \n",
     "\n",
     "Cons:\n",
     "* Cold Start Problem\n",
@@ -181,6 +205,34 @@
    "metadata": {},
    "source": [
     "## Latent Factor Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utility matrix can approximated as a product of long,thin matrices.\n",
+    "$$R \\approx\t Q.P^T $$\n",
+    "\n",
+    "where Q is items x factors matrix and $P^T$ is factors x users matrix.\n",
+    "\n",
+    "The above decomposition is an instance of general theory called \n",
+    "**SVD (singular value decomposition)**. In SVD, given a matrix $A$ \n",
+    "$$ A = U \\sum V^T $$\n",
+    "\n",
+    "Missing items can be calculated using product of factors \n",
+    "$$ \\hat{r}_{xi} = q_i. p_x = \\sum q_{if}.p_{xf} $$\n",
+    "\n",
+    "We cane extend Latent Factor Model to include bias\n",
+    "$$ \\hat{r}_{xi} = \\mu + b_x + b_i + q_i. p_x $$\n",
+    "\n",
+    "All we have to is to solve the below equation that minimize SSE using regularization \n",
+    "\n",
+    "$$ min_{P,Q} \\sum\\limits_{x(x,i) \\in R} \\Big(r_{xi} - \\big(\\mu + b_x + b_i + q_i. p_x \\big)\\Big)^2 + \\bigg[\\lambda_1 \\sum\\limits_i ||q_i||^2 + \\lambda_2 \\sum\\limits_x ||p_x||^2 + \\lambda_3 \\sum\\limits_x ||b_x||^2 + \\lambda_4 \\sum\\limits_i ||b_i||^2 \\bigg] $$\n",
+    "\n",
+    "Stochastic gradient descent is used to learn parameters \n",
+    "\n",
+    "Both biases $b_x$, $b_i$ as well as interactions $q_i$, $p_x$are treated as parameters and we can learn them"
    ]
   }
  ],
