--- a/_notebooks/2020-04-24-logistic-regression.ipynb
+++ b/_notebooks/2020-04-24-logistic-regression.ipynb
@@ -14,11 +14,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "Logistic Regression is a statistical method to predict qualitative response using one or more independent variables. Instead of predicting the response directly, Logistic Regression models probability that the response belongs to a particular category. In logistic regression, we use logistic function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The logistic function will always producr an S shaped curve, so we always get a sensible prediction. $p(X)$ is sometimes also called sigmoid function.\n",
+    "\n",
+    "$$ \\log\\Big(\\frac{p(X)}{1-p(X)}\\Big) = w^TX + c $$\n",
+    "\n",
+    "$$z = w^TX + c $$\n",
+    "\n",
+    "$$ p(X) = \\frac{1}{1 + e^{-z}} $$\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#collapse-hide\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.datasets import load_breast_cancer\n",
@@ -27,38 +49,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Logistic Regression Equation\n",
-    "\\begin{equation*}\n",
-    "\\log(\\frac{p}{1-p}) = wx + c\n",
-    "\\end{equation*}\n",
-    "\n",
-    "\n",
-    "\\begin{equation*}\n",
-    "z = wx + c\n",
-    "\\end{equation*}\n",
-    "\n",
-    "\\begin{equation*}\n",
-    "\\sigma(z) = \\frac{1}{1 + e^{-z}}\n",
-    "\\end{equation*}\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sigmoid(z):\n",
-    "    '''Sigmoid function maps from a value between 0 and 1'''\n",
-    "    return 1/(1+np.exp(-z))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +67,11 @@
     }
    ],
    "source": [
+    "#collapse-hide\n",
+    "def sigmoid(z):\n",
+    "    '''Sigmoid function maps from a value between 0 and 1'''\n",
+    "    return 1/(1+np.exp(-z))\n",
+    "\n",
     "x = np.linspace(-10,10,100)\n",
     "y = sigmoid(x)\n",
     "plt.plot(x,y)\n",
@@ -86,6 +83,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Estimate Regression Coefficients"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A method called **maximum likelihood** is to estimate the unknown coefficients. The idea behind this method is to estimate coefficients such that predicted probability $\\hat{p}(x_i)$ of each observation corresponds closely as possible to the observed value of response variable for the same observation. In other words, we estimate coefficients such that $p(X)$ yields a number close to 1 for the observations with actual response value 1 and a number close to 0 for the observations with actual response value 0. The mathematical eequation for the likelihood function is\n",
+    "\n",
+    "$$ \\ell(W) = \\prod_{i;y_i = 1} p(x_i) \\prod_{i;y_i = 0} ( 1 - p(x_i)) $$\n",
+    "\n",
+    "The $W$ estimates are chosen to maximize the likelihood function. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Manipulating the above constraint, we arrive at Cross Entropy Loss for binary classification case.\n",
     "\\begin{equation}\n",
     "L(y,\\hat{y}) = -\\frac{1}{N} \\sum_{i=1}^N y_i \\log(\\hat{y_i}) + (1-y_i)\\log(\\hat{y_i})\n",
     "\\end{equation}"
@@ -93,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,8 +171,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are gonnna use a algorithm called **batch gradient descent** to find the optimal weights. \n",
+    "\n",
+    "$$ \\Delta w_{i} = -\\eta  \\frac{\\partial L}{\\partial w_{i}} $$\n",
+    "\n",
+    "$$ w_{i} := w_{i} + \\Delta w_{i} $$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,28 +204,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def predict(w,x):\n",
-    "    return sigmoid(np.dot(x,w))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def accuracy(true, probs, threshold = 0.5):\n",
     "    predicted = (probs > threshold).astype(int)\n",
-    "    return 100*(predicted == true).mean()"
+    "    return 100*(predicted == true).mean()\n",
+    "\n",
+    "def predict(w,x):\n",
+    "    return sigmoid(np.dot(x,w))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets load some binary classification data from `sklearn.datasets` and split the data into train test split. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,24 +238,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets call the update weights function to find the optimal weights that minimizes cross entropy loss"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss after iteration 0 is 304.89\n",
-      "Loss after iteration 1000 is 88.0\n",
-      "Loss after iteration 2000 is 83.64\n",
-      "Loss after iteration 3000 is 81.82\n",
-      "Loss after iteration 4000 is 80.66\n",
-      "Loss after iteration 5000 is 79.8\n",
-      "Loss after iteration 6000 is 79.09\n",
-      "Loss after iteration 7000 is 78.49\n",
-      "Loss after iteration 8000 is 77.97\n",
-      "Loss after iteration 9000 is 77.5\n"
+      "Loss after iteration 0 is 281.55\n",
+      "Loss after iteration 1000 is 87.93\n",
+      "Loss after iteration 2000 is 83.59\n",
+      "Loss after iteration 3000 is 81.78\n",
+      "Loss after iteration 4000 is 80.63\n",
+      "Loss after iteration 5000 is 79.76\n",
+      "Loss after iteration 6000 is 79.06\n",
+      "Loss after iteration 7000 is 78.46\n",
+      "Loss after iteration 8000 is 77.94\n",
+      "Loss after iteration 9000 is 77.47\n"
      ]
     }
    ],
@@ -237,8 +271,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets use the model to generate predictions for the test data and see what kind of accuracies are we reaching."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
