Edited prob distributions

--- a/_notebooks/2020-04-26-Probability-Distributions.ipynb
+++ b/_notebooks/2020-04-26-Probability-Distributions.ipynb
@@ -24,7 +24,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Random Variable is functon that maps from the world of random processes to actual number. Random Variable can be discrete or continuous. "
+    "Random Variable is a functon that maps from the world of random processes to real numbers. Random variable is denoted by symbol $X$. The randomness is due to that fact that we have a random experiment. Random Variable can be discrete or continuous. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given any random variable, it would be helpful to understand its behaviour through the lens of probability. A **distribution** of the random variable might be helpful to understand the same. The probability mass function (PMF) of random variables $X$ is defined by $P(X = x)$. PMF of $X$ should follow some criteria. \n",
+    "\n",
+    "* Non negative. $P(X=x) > 0$ if $x = x_j$ else 0 \n",
+    "* Sum = 1. $\\sum\\limits_{i=1}^{\\infty} P(X=x_j) = 1 $ "
    ]
   },
   {
